--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="row">
       <h1><span class="typcn typcn-user-outline icon"></span>About</h1>
       <div class="block"></div>
-      <p>Hello, I'm Tony and I'm located in St. Louis, MO. I'm a self-motivated and driven university student currently seeking to utilize my skills with state of the art technology. I have a knack for learning and creating with an eye for design and development. I’m always trying to actively learn from others. If you are interest in working with me, please contact me below!
+      <p>Hello, I'm Tony and I'm located in St. Louis, MO. I'm a self-motivated and driven university student currently seeking to utilize my skills with state of the art technology. I have a knack for learning and creating with an eye for design and development. I’m always trying to actively learn from others. If you are interested in working with me, you may <a class="smoothscroll" href="#contact">Contact</a> me here!
         <ul>
           <li>Dynamic personality that works well with teams and is highly organized. </li><br>
           <li>Solid grasp of computer skills related to programming, front-end web development, databases, and graphics design. </li><br>
