--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         <input class="button-primary" type="submit" value="Submit">
       </div>
     </form>
+      <div><a href="mailto:anusictony@gmail.com">My Business Email</a></div>
   </div>
 </section>
 
@@ -233,7 +234,7 @@
       <p>Copyright &copy; 2018 Tony Anusic.<br>
 			All Rights Reserved.</p>
     </div>
-    <div class="three columns"> <a href="https://www.linkedin.com/in/tonyanusic" target="_blank"><span class="typcn typcn-social-linkedin-circular socialIcons" id="socialicon" title="LinkedIn"></span></a> <a href="https://github.com/TheLegendaryCro" target="_blank"><span class="typcn typcn-social-github-circular socialIcons" id="socialicon" title="Github"></span></a> <a href="https://twitter.com/thelegendarycro" target="_blank"><span class="typcn typcn-social-twitter-circular socialIcons" id="socialicon" title="Twitter"></span></a> <a href="https://www.instagram.com/thelegendarycro/" target="_blank"><span class="typcn typcn-social-instagram-circular socialIcons" id="socialicon" title="Instagram"></span></a> </div>
+    <div class="three columns"> <a href="https://www.linkedin.com/in/tonyanusic" target="_blank"><span class="typcn typcn-social-linkedin-circular socialIcons" id="socialicon" title="LinkedIn"></span></a></div>
   </div>
 </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
