--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
   <div class="title">
     <h1 class="heading">TONY ANUSIC</h1>
-    <h2 class="heading">- Graphics / Web & Application Development/ Database Analyst -</h2>
+    <h2 class="heading">Graphics / Web & Application Development / Database Analyst</h2>
     <a class="smoothscroll" href="#about">
     <div class="mouse">
       <div class="wheel"></div>
